--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "ya",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-favicon": "^2.0.4"
+    "express-favicon": "^2.0.4",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
