Добавил passport-yandex (надо доработать запись profile в базу и в user_session), убрал passport-jwt,

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-SECRET: "12345",
-PORT: 34,
-MYSQL_LOGIN: "ghbvth",
-MYSQL_PASSWORD: "8976987686896",
+SECRET= "12345"
+PORT= 34
+MYSQL_LOGIN= "ghbvth"
+MYSQL_PASSWORD= "8976987686896"
+jwtToken= "aba"
+jwtTime=2000000
+SALT=10
+YANDEX_CLIENT_ID= "ef2" 
+YANDEX_CLIENT_SECRET= "f403e2b6549b817"
