--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-yandex": "^0.0.5",
     "sqlite3": "^5.1.6",
     "winston": "^3.11.0"
   },
