+yandex works, posts not serialized

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-SECRET: "12345",
-PORT: 34,
-MYSQL_LOGIN: "ghbvth",
-MYSQL_PASSWORD: "8976987686896",
+SECRET="12345"
+PORT= 3000
+MYSQL_LOGIN= "ghbvth"
+MYSQL_PASSWORD= "8976987686896"
+jwtToken= "abob"
+jwtTime=500000
+SALT=10
+APP_TOKEN="y0_AgAAAAAQTWdfAAhhhhhhhhhy9nBBRQ"
+YANDEX_CLIENT_ID="f1b124e8723004f"
+YANDEX_CLIENT_SECRET="0d6d5218c30b36"
