+google auoth2 all works

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,8 @@ jwtToken= "aba"
 jwtTime=2000000
 SALT=10
 YANDEX_CLIENT_ID= "ef2" 
-YANDEX_CLIENT_SECRET= "f403e2b6549b817"
+YANDEX_CLIENT_SECRET= "f403e2TWdfAAtidwAAAAD85OsrA8NUQ"
+GOOGLE_CLIENT_ID= "7793135669mggl69od9iukls.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET= "GOCXPvpv8J7GD_b8XrbU"
+
+ 
