+google работает все

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ MYSQL_PASSWORD= "8976987686896"
 jwtToken= "abob"
 jwtTime=500000
 SALT=10
-APP_TOKEN="y0_AgAAAAAQTWdfAAhhhhhhhhhy9nBBRQ"
+APP_TOKEN="y0_AgAAAAQTWdfAAhhhhhhhhhy9nBBRQ"
 YANDEX_CLIENT_ID="f1b124e8723004f"
-YANDEX_CLIENT_SECRET="0d6d5218c30b36"
+YANDEX_CLIENT_SECRET="0d218c30b36"
+GOOGLE_CLIENT_ID="7793135669sercontent.com"
+GOOGLE_CLIENT_SECRET="GOCSJ7GD_b8XrbU"
