--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-yandex": "^0.0.5",
+    "sequelize": "^6.37.1",
     "sqlite3": "^5.1.6",
     "winston": "^3.11.0"
   },
