--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
+    "passport-vkontakte": "^0.5.0",
     "passport-yandex": "^0.0.5",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.6",
