--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-vkontakte": "^0.5.0",
